# bridgeflow-pwa

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HANDOVER-20260403.md  HANDOVER-20260406.md  HANDOVER-20260410.md  README.en.md  README.md  README.zh.md  SECURITY.md  _check_nginx.py  _deploy_pwa.py  _deploy_pwa_direct.py  _deploy_relay.py  _msg.txt  commitmsg.txt  config.js  index.html  manifest.json  pyproject.toml  sw.js
.cursor/rules/: admin-human-bridge.en.mdc  (+17 more)
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
bridgeflow-nudger/: BUILD.md  BridgeFlow-Desktop.spec  CodeFlow-Desktop.spec  build.spec  config.py  cursor_vision.py  main.py  nudger.py  pack.cmd  requirements.txt  web_panel.py
codeflow-desktop/: BUILD.md  build.spec  cursor_cdp.py  cursor_embed.py  cursor_vision.py  gitee_release.py  gitee_upload_result.txt  main.py  nudger.py  publish.py  release.cmd  release.py  requirements.txt  updater.py  web_panel.py
codeflow-plugin/: README.md  mcp.json  pyproject.toml  requirements.txt
codeflow-shell/: .env.example  .gitignore  README.md  pack.cmd  package-lock.json  package.json  sea-config.json  tsconfig.json
docs/: GitHub发布说明.md  PyPI发布说明.md  cdp-multi-agent.en.md  cdp-multi-agent.md  codeflow-overview.en.md  codeflow-overview.md  config-reference.en.md  config-reference.md  config.js  github-actions-codeflow-pwa.md  index.html  nudger-shoulder-tap.en.md  nudger-shoulder-tap.md  release-process.md  repo-collaboration.md  test-strategy-v0.2-acceleration.md  user-manual.en.md  user-manual.md  产品设计说明.md  用户操作手册.md  配置参考.md
fcop/: ADMIN-01.en.md  CURRENT-ROLES.md  QA-01.en.md  README.en.md  README.md
fcop-mcp/: README.md  pyproject.toml
fcop-mcp/fcop_mcp/: __init__.py  __main__.py  _version.py  server.py
promotion/: index.html
scripts/: bfstart.bat  gen_song_video.py  rename_protocol_to_fcop.py
(+227 files in other folders)
