[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "fcop-mcp"
version = "0.6.1"
description = "MCP (Model Context Protocol) server exposing the fcop library's Project/Task/Report/Issue API to Cursor, Claude Desktop, and other MCP clients."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "FCoP Maintainers" },
]
keywords = [
    "fcop",
    "fcop-mcp",
    "mcp",
    "model-context-protocol",
    "cursor",
    "claude-desktop",
    "multi-agent",
    "agent-coordination",
    "llm-tools",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "fastmcp>=3.2.0",
    "fcop>=0.6.1,<0.7",
    "websockets>=12.0",
]

[project.scripts]
fcop-mcp = "fcop_mcp.__main__:main"

[project.urls]
Changelog = "https://github.com/joinwell52-AI/FCoP/blob/main/CHANGELOG.md"
Documentation = "https://github.com/joinwell52-AI/FCoP#readme"
Homepage = "https://github.com/joinwell52-AI/FCoP"
Repository = "https://github.com/joinwell52-AI/FCoP"
Issues = "https://github.com/joinwell52-AI/FCoP/issues"

[tool.hatch.build.targets.wheel]
packages = ["fcop_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "fcop_mcp",
    "README.md",
    "pyproject.toml",
]
